[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/DotSprite1.PNG" type="Texture" id=1]
[ext_resource path="res://Scripts/Dot.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.51094

[node name="Dot" type="Node2D" groups=[
"destroy_to_finish_lvl",
]]
position = Vector2( 80, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="FadeOutTimer" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
